--- a/Calendar/requirements.txt
+++ b/Calendar/requirements.txt
@@ -65,9 +65,9 @@ jdcal==1.3
 jedi==0.10.2
 Jinja2==2.9.6
 jsonschema==2.6.0
-jupyter-client==5.1.0
+jupyter-client==5.2.3
 jupyter-console==5.2.0
-jupyter-core==4.3.0
+jupyter-core==4.4.0
 jupyterlab==0.27.0
 jupyterlab-launcher==0.4.0
 lazy-object-proxy==1.3.1
@@ -108,6 +108,7 @@ pickleshare==0.7.4
 Pillow==4.2.1
 pkginfo==1.4.1
 ply==3.10
+prometheus-client==0.3.0
 prompt-toolkit==1.0.15
 psutil==5.4.0
 ptyprocess==0.5.2
@@ -129,17 +130,18 @@ python-dateutil==2.6.1
 pytz==2017.2
 PyWavelets==0.5.2
 PyYAML==3.12
-pyzmq==16.0.2
+pyzmq==17.1.0
 QtAwesome==0.4.4
 qtconsole==4.3.1
 QtPy==1.3.1
 requests==2.18.4
-rope==0.10.5
+rope==0.10.7
 ruamel-yaml==0.11.14
 scikit-image==0.13.0
 scikit-learn==0.19.1
 scipy==0.19.1
 seaborn==0.8
+Send2Trash==1.5.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.11.0
